<resources>
    <string name="app_name">Calculator Constraint</string>
    <string name="history_text">1999 + 2 = 2001\n12600 × 5 = 63000</string>
    <string name="display_text">1,061</string>
    <string name="btn_ac">AC</string>
    <string name="btn_sign">+/-</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_subtract">−</string>
    <string name="btn_add">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_decimal">.</string>
    <!-- Number buttons -->
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>