<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#000000"
    tools:context=".CalculatorUsingConstraintLayout">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <!-- Horizontal Guideline for Top Section (Display Area) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_display_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_955"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <!-- History -->
    <TextView
        android:id="@+id/History"
        style="@style/HistoryDisplay"
        android:text="@string/history_text"
        app:layout_constraintBottom_toTopOf="@id/guideline_h_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Main Display -->


    <TextView
        android:id="@+id/Display"
        style="@style/MainDisplay"
        android:text="@string/display_text"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_display_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_20" />




    <Button
        android:id="@+id/btnAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape"
        android:backgroundTint="@null"
        android:text="@string/btn_ac"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_50"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_40" />

    <Button
        android:id="@+id/btnclr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape"
        android:backgroundTint="@null"
        android:text="@string/btn_sign"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_50"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_25"
        app:layout_constraintTop_toTopOf="@id/guideline_h_40"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btnpercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/btn_percent"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_50"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_75"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_50"
        app:layout_constraintTop_toTopOf="@id/guideline_h_40"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape2"
        android:backgroundTint="@null"
        android:text="@string/btn_divide"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_50"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_75"
        app:layout_constraintTop_toTopOf="@id/guideline_h_40"
        />


    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_7"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_65"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_55" />


<!--    <Button-->
<!--        android:id="@+id/btn7"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="@drawable/buttonshape3"-->
<!--        android:text="7"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline_h_65"-->
<!--        app:layout_constraintDimensionRatio="1:1"-->
<!--        app:layout_constraintEnd_toEndOf="@id/guideline_v_25"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline_h_55"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:text="@string/btn_9"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_65"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_75"
        app:layout_constraintStart_toStartOf="@id/guideline_v_50"
        app:layout_constraintTop_toTopOf="@id/guideline_h_55" />


    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:text="@string/btn_8"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_65"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintStart_toStartOf="@id/guideline_v_25"
        app:layout_constraintTop_toTopOf="@id/guideline_h_55"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnmult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape2"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/btn_multiply"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_65"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v_75"
        app:layout_constraintTop_toTopOf="@id/guideline_h_55" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_4"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_80"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_75" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:text="@string/btn_5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_80"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintStart_toStartOf="@id/guideline_v_25"
        app:layout_constraintTop_toTopOf="@id/guideline_h_75" />

    <Button
        android:id="@+id/btn60"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_6"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_80"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_75"
        app:layout_constraintStart_toStartOf="@id/guideline_v_50"
        app:layout_constraintTop_toTopOf="@id/guideline_h_75" />


    <Button
        android:id="@+id/btnminus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape2"
        android:backgroundTint="@null"
        android:text="@string/btn_subtract"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_80"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v_75"
        app:layout_constraintTop_toTopOf="@id/guideline_h_75" />



    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_95"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_85" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:text="@string/btn_2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_95"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintStart_toStartOf="@id/guideline_v_25"
        app:layout_constraintTop_toTopOf="@id/guideline_h_85" />


    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_3"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_95"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_75"
        app:layout_constraintStart_toStartOf="@id/guideline_v_50"
        app:layout_constraintTop_toTopOf="@id/guideline_h_85" />

    <Button
        android:id="@+id/btnplus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape2"
        android:backgroundTint="@null"
        android:text="@string/btn_add"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_95"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v_75"
        app:layout_constraintTop_toTopOf="@id/guideline_h_85" />



    <Button
        android:id="@+id/btnzeroo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_0"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_90"
        app:layout_constraintBottom_toTopOf="@id/guideline_h_955"
        />


    <Button
        android:id="@+id/btndot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape3"
        android:text="@string/btn_decimal"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_75"
        app:layout_constraintStart_toStartOf="@id/guideline_v_50"
        app:layout_constraintTop_toTopOf="@id/guideline_h_90"
        app:layout_constraintBottom_toTopOf="@id/guideline_h_955"
        />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/buttonshape2"
        android:backgroundTint="@null"
        android:text="@string/btn_equal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v_75"
        app:layout_constraintTop_toTopOf="@id/guideline_h_90"
        app:layout_constraintBottom_toTopOf="@id/guideline_h_955"
        />






</androidx.constraintlayout.widget.ConstraintLayout>